{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 20,
  "lineage": "c3cf6678-9686-f1b5-8b0a-d00e2c44f385",
  "resources": [
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastian-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:security-group/sg-0246e0cd85cc48580",
            "description": "Security group for bastian host",
            "egress": [
              {
                "cidr_blocks": [
                  "53.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0246e0cd85cc48580",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastian-sg",
            "name_prefix": "",
            "owner_id": "122610514582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastian-sg"
            },
            "tags_all": {
              "Name": "bastian-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e342ea1db4001eef",
            "arn": "arn:aws:ec2:us-east-1:122610514582:elastic-ip/eipalloc-0e342ea1db4001eef",
            "association_id": "eipassoc-0fd1d6610762115f3",
            "domain": "vpc",
            "id": "eipalloc-0e342ea1db4001eef",
            "network_border_group": "us-east-1",
            "network_interface": "eni-064427cd1e82ca7db",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-34-204-254-125.compute-1.amazonaws.com",
            "public_ip": "34.204.254.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eip"
            },
            "tags_all": {
              "Name": "my-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:internet-gateway/igw-0a6e0319de7bd14a5",
            "id": "igw-0a6e0319de7bd14a5",
            "owner_id": "122610514582",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e342ea1db4001eef",
            "association_id": "eipassoc-0fd1d6610762115f3",
            "connectivity_type": "public",
            "id": "nat-063580b330518f3bb",
            "network_interface_id": "eni-064427cd1e82ca7db",
            "private_ip": "10.0.1.214",
            "public_ip": "34.204.254.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de6eb401db6f631e",
            "tags": {
              "Name": "my-NAT"
            },
            "tags_all": {
              "Name": "my-NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.my-eip",
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_subnet.public-sub-1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:route-table/rtb-059db7e270c859d73",
            "id": "rtb-059db7e270c859d73",
            "owner_id": "122610514582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-063580b330518f3bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my-eip",
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_nat_gateway.my-nat",
            "module.vpc.aws_subnet.public-sub-1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:route-table/rtb-0073adc4a70d91876",
            "id": "rtb-0073adc4a70d91876",
            "owner_id": "122610514582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6e0319de7bd14a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05841b17efb71226f",
            "route_table_id": "rtb-059db7e270c859d73",
            "subnet_id": "subnet-0aff3b54ed0065b7e"
          },
          "dependencies": [
            "module.vpc.aws_eip.my-eip",
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_nat_gateway.my-nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-sub-1",
            "module.vpc.aws_subnet.public-sub-1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb9c01a76bd38b5",
            "route_table_id": "rtb-059db7e270c859d73",
            "subnet_id": "subnet-0fa737f2cf9fdb7e0"
          },
          "dependencies": [
            "module.vpc.aws_eip.my-eip",
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_nat_gateway.my-nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-sub-2",
            "module.vpc.aws_subnet.public-sub-1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ecd5c49e7c49fc4",
            "route_table_id": "rtb-0073adc4a70d91876",
            "subnet_id": "subnet-0de6eb401db6f631e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-sub-1",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a9c9b85fc71c735",
            "route_table_id": "rtb-0073adc4a70d91876",
            "subnet_id": "subnet-0475c372a80ee7c06"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-sub-2",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:subnet/subnet-0aff3b54ed0065b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aff3b54ed0065b7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610514582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:subnet/subnet-0fa737f2cf9fdb7e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa737f2cf9fdb7e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610514582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:subnet/subnet-0de6eb401db6f631e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6eb401db6f631e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610514582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:subnet/subnet-0475c372a80ee7c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475c372a80ee7c06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610514582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0b1c36cfe52a5ed43"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610514582:vpc/vpc-0b1c36cfe52a5ed43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1fc31e3b5f3d05f",
            "default_route_table_id": "rtb-0583879c96daa891a",
            "default_security_group_id": "sg-024ffcc581f87397e",
            "dhcp_options_id": "dopt-0011f9f5e54c3abbe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1c36cfe52a5ed43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0583879c96daa891a",
            "owner_id": "122610514582",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}